--- a/common/src/styles/_typography.scss
+++ b/common/src/styles/_typography.scss
@@ -54,7 +54,7 @@ $height-blog-mobile: calc(26px / $blog-mobile);
 $aside: 14px;
 $height-aside: calc(24px / $aside);
 $aside-mobile: 12px;
-$height-aside-mobile: calc(22px / $aside-mobile);
+$height-aside-mobile: calc(20px / $aside-mobile);
 
 $code: 12px;
 $height-code: calc(22px / $code);
